--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   "author": "Paweł Kołaczyński <Pawel.Kolaczynski@rossmann.com.pl>",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "copy-webpack-plugin": "^10.2.4",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.24",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "css-loader": "^6.7.1"
   }
 }
